--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "heroku": "^7.63.0",
     "mongoose": "^6.5.5"
   },
   "devDependencies": {
